--- a/rtmath/mie-qt-ui/frmJobItemProps.ui
+++ b/rtmath/mie-qt-ui/frmJobItemProps.ui
@@ -37,9 +37,6 @@
    <item row="1" column="1">
     <widget class="QTextEdit" name="txtDescription"/>
    </item>
-   <item row="2" column="1">
-    <widget class="QComboBox" name="actionComboBox"/>
-   </item>
    <item row="2" column="0">
     <widget class="QLabel" name="actionLabel">
      <property name="text">
@@ -47,10 +44,34 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
+   <item row="2" column="1">
+    <widget class="QComboBox" name="actionComboBox"/>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="actionParametersLabel">
+     <property name="text">
       <string>Action Parameters:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPlainTextEdit" name="txtActionParams">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QToolButton" name="cmdModifyParams">
+     <property name="text">
+      <string>Modify Parameters...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
