--- a/rtmath/rtmath-apps/ddscat-genparams-qt/frmmain.ui
+++ b/rtmath/rtmath-apps/ddscat-genparams-qt/frmmain.ui
@@ -19,7 +19,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tabGeneral">
        <attribute name="title">
@@ -829,7 +829,7 @@
         <item row="4" column="0">
          <widget class="QLabel" name="label_30">
           <property name="text">
-           <string>Temperature:</string>
+           <string>Temperatures:</string>
           </property>
          </widget>
         </item>
