--- a/rtmath/rtmath-apps/ddscat-genparams-qt/frmmain.ui
+++ b/rtmath/rtmath-apps/ddscat-genparams-qt/frmmain.ui
@@ -22,7 +22,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tabGeneral">
        <attribute name="title">
@@ -609,34 +609,6 @@
           </property>
          </widget>
         </item>
-        <item row="9" column="0">
-         <widget class="QLabel" name="label_20">
-          <property name="text">
-           <string>Max Number of Iterations:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="10" column="0">
-         <widget class="QLabel" name="label_22">
-          <property name="text">
-           <string>Interaction Cutoff Parameter (GAMMA):</string>
-          </property>
-         </widget>
-        </item>
-        <item row="11" column="0">
-         <widget class="QLabel" name="label_21">
-          <property name="text">
-           <string>Angular Resolution (ETASCA):</string>
-          </property>
-         </widget>
-        </item>
-        <item row="12" column="0">
-         <widget class="QLabel" name="label_23">
-          <property name="text">
-           <string>Refractive Index of Ambient Medium:</string>
-          </property>
-         </widget>
-        </item>
         <item row="8" column="1">
          <widget class="QLineEdit" name="txtMaxTol">
           <property name="statusTip">
@@ -644,6 +616,13 @@
           </property>
           <property name="placeholderText">
            <string>1.0E-5</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="0">
+         <widget class="QLabel" name="label_20">
+          <property name="text">
+           <string>Max Number of Iterations:</string>
           </property>
          </widget>
         </item>
@@ -657,6 +636,13 @@
           </property>
          </widget>
         </item>
+        <item row="10" column="0">
+         <widget class="QLabel" name="label_22">
+          <property name="text">
+           <string>Interaction Cutoff Parameter (GAMMA):</string>
+          </property>
+         </widget>
+        </item>
         <item row="10" column="1">
          <widget class="QLineEdit" name="txtGamma">
           <property name="statusTip">
@@ -664,6 +650,13 @@
           </property>
           <property name="placeholderText">
            <string>5.00e-3</string>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="0">
+         <widget class="QLabel" name="label_21">
+          <property name="text">
+           <string>Angular Resolution (ETASCA):</string>
           </property>
          </widget>
         </item>
@@ -677,6 +670,13 @@
           </property>
          </widget>
         </item>
+        <item row="12" column="0">
+         <widget class="QLabel" name="label_23">
+          <property name="text">
+           <string>Refractive Index of Ambient Medium:</string>
+          </property>
+         </widget>
+        </item>
         <item row="12" column="1">
          <widget class="QLineEdit" name="txtNAMBIENT">
           <property name="statusTip">
@@ -684,6 +684,23 @@
           </property>
           <property name="placeholderText">
            <string>1.000</string>
+          </property>
+         </widget>
+        </item>
+        <item row="13" column="1">
+         <widget class="QCheckBox" name="chkWriteSca">
+          <property name="statusTip">
+           <string>The fml and sca files contain the calculations for each rotation</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="13" column="0">
+         <widget class="QLabel" name="label_27">
+          <property name="text">
+           <string>Write fml and sca files:</string>
           </property>
          </widget>
         </item>
