--- a/rtmath/rtmath-apps/ddscat-genparams-qt/frmTarget.ui
+++ b/rtmath/rtmath-apps/ddscat-genparams-qt/frmTarget.ui
@@ -13,224 +13,234 @@
   <property name="windowTitle">
    <string>Target Properties</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <layout class="QFormLayout" name="formLayout">
-     <item row="1" column="0">
-      <widget class="QLabel" name="label">
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>9</x>
+     <y>9</y>
+     <width>774</width>
+     <height>446</height>
+    </rect>
+   </property>
+   <layout class="QFormLayout" name="formLayout">
+    <item row="1" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Target Type:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QComboBox" name="cmbTargetType">
+      <item>
        <property name="text">
-        <string>Target Type:</string>
+        <string>From Base Shape File</string>
        </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QComboBox" name="cmbTargetType">
-       <item>
-        <property name="text">
-         <string>From Base Shape File</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Ellipsoid</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Hex Plate</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Rectangular Prism</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Column / Needle</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>TMATRIX Ellipsoid</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>TMATRIX Cylinder</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_2">
+      </item>
+      <item>
        <property name="text">
-        <string>Base Shape File:</string>
+        <string>Ellipsoid</string>
        </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_3">
+      </item>
+      <item>
        <property name="text">
-        <string>Dimension Relations:</string>
+        <string>Hex Plate</string>
        </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QComboBox" name="cmbAspectRatio">
-       <property name="enabled">
-        <bool>false</bool>
+      </item>
+      <item>
+       <property name="text">
+        <string>Rectangular Prism</string>
        </property>
-       <item>
-        <property name="text">
-         <string>No relation</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Wyser et al. (1998)</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Perturbed Wyser</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Custom</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QTextBrowser" name="textBrowser">
-       <property name="enabled">
-        <bool>false</bool>
+      </item>
+      <item>
+       <property name="text">
+        <string>Column / Needle</string>
        </property>
-       <property name="html">
-        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+      </item>
+      <item>
+       <property name="text">
+        <string>TMATRIX Ellipsoid</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>TMATRIX Cylinder</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Base Shape File:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Dimension Relations:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QComboBox" name="cmbAspectRatio">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <item>
+       <property name="text">
+        <string>No relation</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Wyser et al. (1998)</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Perturbed Wyser</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Custom</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QTextBrowser" name="textBrowser">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="html">
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;Relation info goes here...&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QTreeWidget" name="treeGlobals">
-       <property name="contextMenuPolicy">
-        <enum>Qt::CustomContextMenu</enum>
-       </property>
-       <property name="toolTip">
-        <string>TODO! Have quantity be selected from a combo box</string>
-       </property>
-       <property name="statusTip">
-        <string>Specify target dimensions. Range notation (min:lin span:max) accepted. Units required.</string>
-       </property>
-       <property name="alternatingRowColors">
-        <bool>true</bool>
-       </property>
-       <property name="selectionMode">
-        <enum>QAbstractItemView::ExtendedSelection</enum>
-       </property>
-       <column>
-        <property name="text">
-         <string>Variable</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Range</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Units</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_4">
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QTreeWidget" name="treeConstraints">
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
+      <property name="toolTip">
+       <string/>
+      </property>
+      <property name="statusTip">
+       <string>Specify target dimensions. Range notation (min:lin span:max) accepted. Units required.</string>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+      <column>
        <property name="text">
-        <string>General Target Properties:</string>
+        <string>Variable</string>
        </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QTreeWidget" name="treeShapedat">
-       <attribute name="headerVisible">
-        <bool>false</bool>
-       </attribute>
-       <column>
-        <property name="text">
-         <string>File</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <property name="sizeConstraint">
-      <enum>QLayout::SetMinAndMaxSize</enum>
-     </property>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="cmdOK">
+      </column>
+      <column>
        <property name="text">
-        <string>OK</string>
+        <string>Range</string>
        </property>
-       <property name="autoDefault">
-        <bool>true</bool>
-       </property>
-       <property name="default">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="cmdCancel">
+      </column>
+      <column>
        <property name="text">
-        <string>Cancel</string>
+        <string>Units</string>
        </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-  </layout>
+      </column>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>General Target Properties:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QTreeWidget" name="treeShapedat">
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOn</enum>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+      <attribute name="headerVisible">
+       <bool>false</bool>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>File</string>
+       </property>
+      </column>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>9</x>
+     <y>461</y>
+     <width>204</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <property name="sizeConstraint">
+     <enum>QLayout::SetMinAndMaxSize</enum>
+    </property>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="cmdOK">
+      <property name="text">
+       <string>OK</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="cmdCancel">
+      <property name="text">
+       <string>Cancel</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources/>
  <connections>
   <connection>
-   <sender>treeGlobals</sender>
+   <sender>treeConstraints</sender>
    <signal>itemDoubleClicked(QTreeWidgetItem*,int)</signal>
    <receiver>frmTarget</receiver>
    <slot>editTreeItem(QTreeWidgetItem*,int)</slot>
@@ -246,7 +256,7 @@ p, li { white-space: pre-wrap; }
    </hints>
   </connection>
   <connection>
-   <sender>treeGlobals</sender>
+   <sender>treeConstraints</sender>
    <signal>customContextMenuRequested(QPoint)</signal>
    <receiver>frmTarget</receiver>
    <slot>menuTargetProps(QPoint)</slot>
@@ -261,6 +271,86 @@ p, li { white-space: pre-wrap; }
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>cmdCancel</sender>
+   <signal>clicked()</signal>
+   <receiver>frmTarget</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>455</x>
+     <y>462</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>247</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>treeShapedat</sender>
+   <signal>itemDoubleClicked(QTreeWidgetItem*,int)</signal>
+   <receiver>frmTarget</receiver>
+   <slot>editTreeItem(QTreeWidgetItem*,int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>462</x>
+     <y>231</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>247</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>treeShapedat</sender>
+   <signal>customContextMenuRequested(QPoint)</signal>
+   <receiver>frmTarget</receiver>
+   <slot>menuShapeDatProps(QPoint)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>462</x>
+     <y>231</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>247</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cmbTargetType</sender>
+   <signal>currentIndexChanged(int)</signal>
+   <receiver>frmTarget</receiver>
+   <slot>targetTypeChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>462</x>
+     <y>152</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>247</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cmdOK</sender>
+   <signal>clicked()</signal>
+   <receiver>frmTarget</receiver>
+   <slot>processOK()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>93</x>
+     <y>473</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>247</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>processOK()</slot>
@@ -268,5 +358,6 @@ p, li { white-space: pre-wrap; }
   <slot>dimRelnsChanged()</slot>
   <slot>editTreeItem(QTreeWidgetItem*,int)</slot>
   <slot>menuTargetProps(QPoint)</slot>
+  <slot>menuShapeDatProps(QPoint)</slot>
  </slots>
 </ui>
