--- a/rtmath/rtmath-apps/tmatrix-convert-from-ddscat/frmmain.ui
+++ b/rtmath/rtmath-apps/tmatrix-convert-from-ddscat/frmmain.ui
@@ -144,28 +144,6 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
-     <widget class="QComboBox" name="cmbDiel">
-      <property name="statusTip">
-       <string>Specify the dielectric constant calculation method.</string>
-      </property>
-      <item>
-       <property name="text">
-        <string>Sihvola</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Debye</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Maxwell-Garnett</string>
-       </property>
-      </item>
-     </widget>
-    </item>
     <item row="6" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
@@ -223,6 +201,42 @@
        <widget class="QPushButton" name="cmdDefFind">
         <property name="text">
          <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="5" column="1">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QComboBox" name="cmbDiel">
+        <property name="statusTip">
+         <string>Specify the dielectric constant calculation method.</string>
+        </property>
+        <item>
+         <property name="text">
+          <string>Sihvola</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Debye</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Maxwell-Garnett</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="txtDiel">
+        <property name="statusTip">
+         <string>Value of nu for the Sihvola method</string>
+        </property>
+        <property name="placeholderText">
+         <string>0.85</string>
         </property>
        </widget>
       </item>
