--- a/Ryan_Debug.template.wxs
+++ b/Ryan_Debug.template.wxs
@@ -6,7 +6,7 @@
 
     <Package Id='*' Keywords='Installer' Description="Ryan_Debug Installer"
       Comments='Provides the Ryan_Debug library (various versions)' Manufacturer='Ryan Honeyager'
-      InstallerVersion='200' Languages='1033' Compressed='yes' SummaryCodepage='1252' Platform='x64' />
+      InstallerVersion='300' Languages='1033' Compressed='yes' SummaryCodepage='1252' Platform='x64' />
 
     <Condition Message="This application is only supported on 64-bit Windows Vista, Windows Server 2008, or higher.">
       <![CDATA[Installed OR (VersionNT64 >= 600)]]>
@@ -15,20 +15,94 @@
     <Media Id='1' Cabinet='Ryan_Debug_x64.cab' EmbedCab='yes' DiskPrompt='Ryan_Debug_x64' />
     <Property Id='DiskPrompt' Value="Ryan_Debug x64 vc110" />
 
+    <!-- Need to first add in cmake file customization
+    <Directory Id='MODULEDIR' Name='envmodulebasedir'>
+      <Component Id='envmodules' Guid='24F3A275-CFAD-4E4E-92DF-ED2910271313'>
+        <File Id='develmodule' Name='Ryan_Debug_module' DiskId='1' Source='module' KeyPath='yes' />
+      </Component>
+    </Directory>
+    -->
     <Directory Id='TARGETDIR' Name='SourceDir'>
       <Directory Id='ProgramFiles64Folder' Name='PFiles'>
         <Directory Id='Ryan' Name='Ryan'>
           <Directory Id='INSTALLDIR' Name='Ryan_Debug'>
             <Directory Id='bindir' Name='bin'>
               <Directory Id='sxsdir' Name='Ryan.Debug.DebugAssembly'>
-                <Component Id='Dll' Guid='A1574708-A1BD-4271-B1CA-B5755748CAF7' Win64='yes'>
-                  <File Id='RawDll' Name='Ryan_Debug_x64.dll' DiskId='1' Source='bin/Ryan.Debug.DebugAssembly/Ryan_Debug_x64.dll' KeyPath='yes' />
-                  <File Id='policyFile' Name='policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly' DiskId='1' Source='bin/Ryan.Debug.DebugAssembly/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly' KeyPath='no' />
-                  <!--<File Id='appManifest' Name='Ryan.Debug.DebugAssembly.app.manifest' DiskId='1' Source='bin/Ryan.Debug.DebugAssembly/Ryan.Debug.DebugAssembly.app.manifest' KeyPath='no' /> -->
-                  <File Id='catalog' Name='Ryan.Debug.DebugAssembly.cat' DiskId='1' Source='bin/Ryan.Debug.DebugAssembly/Ryan.Debug.DebugAssembly.cat' KeyPath='no' />
-                  <File Id='dllManifest' Name='Ryan.Debug.DebugAssembly.manifest' DiskId='1' Source='bin/Ryan.Debug.DebugAssembly/Ryan.Debug.DebugAssembly.manifest' KeyPath='no' />
+                
+                <!-- The sxs private assembly example goes here -->
+                <Component Id='DllPrivate' Guid='A1574708-A1BD-4271-B1CA-B5755748CAE7' Win64='yes'>
+                  <File Id='RawDllPrivate' 
+                        Vital='yes'
+                        Name='Ryan_Debug_x64.dll' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/Ryan_Debug_x64.dll' 
+                        KeyPath='yes' />
+                  <File Id='dllcatalogPrivate' 
+                        Vital='yes' 
+                        Name='Ryan.Debug.DebugAssembly.cat' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/Ryan.Debug.DebugAssembly.cat' 
+                        KeyPath='no' />
+                  <File Id='dllManifestPrivate' 
+                        Vital='yes' 
+                        Name='Ryan.Debug.DebugAssembly.manifest' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/Ryan.Debug.DebugAssembly.manifest' 
+                        KeyPath='no' />
                 </Component>
+                <Component Id='PolicyPrivate' Guid='A1574708-A1BD-4271-B1CA-B5755748CAE8' Win64='yes' Transitive='yes'>
+                  <File Id='policyFilePrivate' 
+                        Vital='yes' 
+                        Name='policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.manifest' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.manifest' 
+                        KeyPath='yes' />
+                  <File Id='policyCatPrivate' 
+                        Name='policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.cat' 
+                        Source='bin/Ryan.Debug.DebugAssembly/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.cat' 
+                        Vital='no'/>
+                </Component>
+                
               </Directory>
+              
+                <!-- The sxs public assembly stuff goes here (separate folder to prevent reference counting issues when compiling. -->
+                <Component Id='Dll' Guid='A1574708-A1BD-4271-B1CA-B5755748CAF7' Win64='yes'>
+                  <File Id='RawDll' 
+                        AssemblyManifest='dllManifest' 
+                        Assembly='win32' 
+                        Vital='yes'
+                        Name='Ryan_Debug_x64.dll' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/Ryan_Debug_x64.dll' 
+                        KeyPath='yes' />
+                  <File Id='dllcatalog' 
+                        Vital='yes' 
+                        Name='Ryan.Debug.DebugAssembly.cat' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/Ryan.Debug.DebugAssembly.cat' 
+                        KeyPath='no' />
+                  <File Id='dllManifest' 
+                        Vital='yes' 
+                        Name='Ryan.Debug.DebugAssembly.manifest' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/Ryan.Debug.DebugAssembly.manifest' 
+                        KeyPath='no' />
+                </Component>
+                <Component Id='Policy' Guid='A1574708-A1BD-4271-B1CA-B5755748CAF8' Win64='yes' Transitive='yes'>
+                  <File Id='policyFile' 
+                        Assembly='win32' 
+                        AssemblyManifest='policyFile' 
+                        Vital='yes' 
+                        Name='policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.manifest' 
+                        DiskId='1' 
+                        Source='bin/Ryan.Debug.DebugAssembly/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.manifest' 
+                        KeyPath='yes' />
+                  <File Id='policyCat' 
+                        Name='policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.cat' 
+                        Source='bin/Ryan.Debug.DebugAssembly/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.cat' 
+                        Vital='no'/>
+                </Component>
+              
               <Component Id='AppLogger' Guid='4EF4648F-761F-428D-9230-2CD85F7C9B10' Win64='yes'>
                 <File Id='AppLogger1' Name='Ryan_Debug-logger.exe' DiskId='1' Source='bin/Ryan_Debug-logger.exe' KeyPath='yes' />
               </Component>
@@ -50,12 +124,21 @@
                 <File Id='DebugLib' Name='Ryan_Debug_x64.lib' DiskId='1' Source='lib/Ryan_Debug_x64.lib' KeyPath='yes' />
               </Component>
             </Directory>
+            <Directory Id='cmakedir' Name='CMake'>
+              <Component Id='cmakefiles' Guid='A5A31E18-E6D0-44FA-9591-751143F5DE2C' Win64='yes'>
+                <File Id='Ryan_DebugConfig.cmake' Name='Ryan_DebugConfig.cmake' DiskId='1' Source='CMake/Ryan_DebugConfig.cmake' KeyPath='yes' />
+                <File Id='Ryan_DebugConfigVersion.cmake' Name='Ryan_DebugConfigVersion.cmake' DiskId='1' Source='CMake/Ryan_DebugConfigVersion.cmake' KeyPath='no' />
+                <File Id='Ryan_DebugTargets.cmake' Name='Ryan_DebugTargets.cmake' DiskId='1' Source='CMake/Ryan_DebugTargets.cmake' KeyPath='no' />
+                <File Id='Ryan_DebugTargets_release.cmake' Name='Ryan_DebugTargets-release.cmake' DiskId='1' Source='CMake/Ryan_DebugTargets-release.cmake' KeyPath='no' />
+              </Component>
+            </Directory>
           </Directory>
         </Directory>
       </Directory>
     </Directory>
     
-      <Feature Id='Complete' Title='Ryan_Debug' Description='The complete package' Level='1' Display='expand' ConfigurableDirectory='INSTALLDIR' AllowAdvertise='no'>
+      <Feature Id='Complete' Title='Ryan_Debug' Description='The complete package' Level='1' Display='expand' 
+               ConfigurableDirectory='INSTALLDIR' AllowAdvertise='no' Absent='disallow'>
         <Feature Id='Development' Title='Development' Description='Header files and linker libraries for app development.' Level='1' AllowAdvertise='no'>
           <ComponentRef Id='headers' />
           <Feature Id='lib_vc110' Title='MSVC 2012' Description='Linker libraries for MSVC 2012' Level='1' AllowAdvertise='no'>
@@ -63,12 +146,26 @@
           </Feature>
         </Feature>
         <Feature Id='DllAssembly' Title='Libraries' Description='The core libraries' Level='1' Absent='disallow' AllowAdvertise='no'>
-          <ComponentRef Id='Dll' />
+          <Feature Id='DllAssemblyShared' Title='Publicly Register Libraries' Description='Install public sxs modules (requires administrator mode).' Level='1' AllowAdvertise='no' TypicalDefault='install'>
+            <ComponentRef Id='Dll' />
+            <ComponentRef Id='Policy' />
+          </Feature>
+          <ComponentRef Id='DllPrivate' />
+          <ComponentRef Id='PolicyPrivate' />
         </Feature>
         <Feature Id='Apps' Title='Applications' Description='Sample applications' Level='1' AllowAdvertise='no'>
           <ComponentRef Id='AppLogger' />
           <ComponentRef Id='AppTest' />
         </Feature>
+        <Feature Id='CMake' Title='CMake Files' Description='Provides CMake package configuration files' Level='1' AllowAdvertise='no'>
+          <ComponentRef Id='cmakefiles' />
+        </Feature>
+        <!--
+        <Feature Id='Modules' Title='Modules' Description='Environment-modules registration' AllowAdvertise='no' Level='1' TypicalDefault='advertise'
+                 ConfigurableDirectory='MODULEDIR'>
+          <ComponentRef Id='envmodules'/>
+        </Feature>
+        -->
       </Feature>
 
     <UIRef Id="WixUI_FeatureTree" />
